--- a/code-ch01/Chapter1.ipynb
+++ b/code-ch01/Chapter1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement\n",
     "a = FieldElement(7, 13)\n",
@@ -43,9 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1\n",
     "\n",
@@ -55,18 +76,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(7 % 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "print(-27 % 13)"
    ]
@@ -89,23 +126,54 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FieldElement_57(20)\n"
+     ]
+    },
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(FieldElement(\u001b[38;5;241m44\u001b[39m, prime) \u001b[38;5;241m+\u001b[39m FieldElement(\u001b[38;5;241m33\u001b[39m, prime))\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# 9-29\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mFieldElement\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprime\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mFieldElement\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m29\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprime\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# 17+42+49\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# 52-30-38\u001b[39;00m\n",
+      "File \u001b[0;32m~/code/programmingbitcoin/code-ch01/ecc.py:42\u001b[0m, in \u001b[0;36mFieldElement.__sub__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCannot subtract two numbers in different Fields\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     39\u001b[0m \u001b[38;5;66;03m# self.num and other.num are the actual values\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m# self.prime is what we need to mod against\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m# We return an element of the same class\u001b[39;00m\n\u001b[0;32m---> 42\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2\n",
     "\n",
     "# remember that % is the modulo operator\n",
     "prime = 57\n",
     "# 44+33\n",
-    "# 9-29\n",
+    "print(FieldElement(44, prime) + FieldElement(33, prime))\n",
+    "# 9-29 = 36\n",
+    "print(FieldElement(9, prime) - FieldElement(29, prime))\n",
+    "\n",
     "# 17+42+49\n",
     "# 52-30-38"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement\n",
     "a = FieldElement(7, 13)\n",
@@ -127,9 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3\n",
     "\n",
@@ -182,14 +262,89 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k=1, i=0, rem=0\n",
+      "k=1, i=1, rem=1\n",
+      "k=1, i=2, rem=2\n",
+      "k=1, i=3, rem=3\n",
+      "k=1, i=4, rem=4\n",
+      "k=1, i=5, rem=5\n",
+      "k=1, i=6, rem=6\n",
+      "k=1, i=7, rem=7\n",
+      "7\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7]\n",
+      "\n",
+      "k=3, i=0, rem=0\n",
+      "k=3, i=1, rem=3\n",
+      "k=3, i=2, rem=6\n",
+      "k=3, i=3, rem=1\n",
+      "k=3, i=4, rem=4\n",
+      "k=3, i=5, rem=7\n",
+      "k=3, i=6, rem=2\n",
+      "k=3, i=7, rem=5\n",
+      "5\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7]\n",
+      "\n",
+      "k=7, i=0, rem=0\n",
+      "k=7, i=1, rem=7\n",
+      "k=7, i=2, rem=6\n",
+      "k=7, i=3, rem=5\n",
+      "k=7, i=4, rem=4\n",
+      "k=7, i=5, rem=3\n",
+      "k=7, i=6, rem=2\n",
+      "k=7, i=7, rem=1\n",
+      "1\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7]\n",
+      "\n",
+      "k=13, i=0, rem=0\n",
+      "k=13, i=1, rem=5\n",
+      "k=13, i=2, rem=2\n",
+      "k=13, i=3, rem=7\n",
+      "k=13, i=4, rem=4\n",
+      "k=13, i=5, rem=1\n",
+      "k=13, i=6, rem=6\n",
+      "k=13, i=7, rem=3\n",
+      "3\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7]\n",
+      "\n",
+      "k=18, i=0, rem=0\n",
+      "k=18, i=1, rem=2\n",
+      "k=18, i=2, rem=4\n",
+      "k=18, i=3, rem=6\n",
+      "k=18, i=4, rem=0\n",
+      "k=18, i=5, rem=2\n",
+      "k=18, i=6, rem=4\n",
+      "k=18, i=7, rem=6\n",
+      "6\n",
+      "[0, 0, 2, 2, 4, 4, 6, 6]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5\n",
     "\n",
-    "prime = 19\n",
-    "k = 1  # 3, 7, 13 and 18 are the other possibilities\n",
-    "# loop through all possible k's 0 up to prime-1\n",
-    "# calculate k*iterator % prime\n",
+    "# for all k the set of remaineders in finite field f_{p} {k*0, k*1, .. k*p-1} contains \n",
+    "# all values 0, ... , p-1 exactly once if p is prime. This is not the case for e.g. p = 8, k = 18\n",
+    "\n",
+    "prime = 19 \n",
+    "# prime = 8\n",
+    "ks = [1, 3, 7, 13, 18]\n",
+    "for k in ks:\n",
+    "    remainders = []\n",
+    "    for i in range(prime):\n",
+    "        rem = (k*i)%prime\n",
+    "        remainders.append(rem)\n",
+    "        print(f\"{k=}, {i=}, {rem=}\")\n",
+    "    print (f\"{-k%prime}\")\n",
+    "    print(sorted(remainders))\n",
+    "\n",
+    "    print(\"\")\n",
+    "\n",
     "\n",
     "# Hint - sort!"
    ]
@@ -220,9 +375,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6\n",
     "\n",
@@ -232,9 +399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement\n",
     "a = FieldElement(3, 13)\n",
@@ -328,7 +503,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
