--- a/code-ch01/Chapter1.ipynb
+++ b/code-ch01/Chapter1.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -430,13 +430,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " i=1, i**(prime-1)=1, rem=1\n",
+      " i=2, i**(prime-1)=1024, rem=1\n",
+      " i=3, i**(prime-1)=59049, rem=1\n",
+      " i=4, i**(prime-1)=1048576, rem=1\n",
+      " i=5, i**(prime-1)=9765625, rem=1\n",
+      " i=6, i**(prime-1)=60466176, rem=1\n",
+      " i=7, i**(prime-1)=282475249, rem=1\n",
+      " i=8, i**(prime-1)=1073741824, rem=1\n",
+      " i=9, i**(prime-1)=3486784401, rem=1\n",
+      " i=10, i**(prime-1)=10000000000, rem=1\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 7\n",
+    "# It results in a set with only  the element 1 in it. \n",
+    "\n",
+    "# primes = [7,]# 11, 17, 31, 43]\n",
+    "\n",
+    "prime = 11 \n",
+    "# prime = 8\n",
+    "\n",
+    "remainders = []\n",
+    "for i in range(1, prime):\n",
+    "    rem = (i**(prime-1))%prime\n",
+    "    remainders.append(rem)\n",
+    "    print(f\" {i=}, {i**(prime-1)=}, {rem=}\")\n",
+    "\n",
+    "print(sorted(remainders))\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Exercise 7\n",
-    "\n",
-    "primes = [7, 11, 17, 31, 43]"
+    "for prime in (7, 11, 17, 31):\n",
+    "    print([pow(i, prime-1)%prime for i in range(1, prime)])\n"
    ]
   },
   {
@@ -454,15 +514,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "FieldElement_31(4)\n",
+      "FieldElement_31(4)\n",
+      "29\n",
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 8\n",
     "\n",
     "# 3/24\n",
+    "# 3* 24^-1 = 3 * 24^29 % 31\n",
+    "prime = 31\n",
+    "print(3 * pow(24, (prime-2), prime) % prime )\n",
+    "print(FieldElement(3, prime) * FieldElement(24, prime)**(prime-2))\n",
+    "print(FieldElement(3, prime) * FieldElement(24, prime)**(prime-2))\n",
+    "\n",
     "# 17**-3\n",
-    "# 4**-4*11"
+    "# 17^-3 = (17^-1) ^ 3\n",
+    "print( pow(pow(17, 29, 31) , 3, 31))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 4**-4*11\n",
+    "# 11 * (4_f ^ -1)^4\n",
+    "# 11 * (4_f ^ 29)^4\n",
+    "\n",
+    "print( pow(pow(4, 29, 31) , 4, 31) * 11 % 31)\n"
    ]
   },
   {
@@ -480,9 +567,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.004s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 9\n",
+    "\n",
+    "reload(ecc)\n",
+    "run(ecc.FieldElementTest(\"test_pow\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 9\n",
     "\n",
@@ -492,15 +615,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement\n",
     "a = FieldElement(7, 13)\n",
     "b = FieldElement(8, 13)\n",
     "print(a**-3==b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
