--- a/code-ch02/Chapter2.ipynb
+++ b/code-ch02/Chapter2.ipynb
@@ -96,9 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2\n",
     "\n",
@@ -108,9 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(-1,-1)_5_7\n",
+      "Point(-1,1)_5_7\n",
+      "Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import Point\n",
     "p1 = Point(-1, -1, 5, 7)\n",
@@ -134,9 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.000s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3\n",
     "\n",
@@ -155,9 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(3.0,-7.0)_5_7"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exercise 4\n",
     "\n",
@@ -168,7 +213,8 @@
     "x1, y1 = 2, 5\n",
     "x2, y2 = -1, -1\n",
     "\n",
-    "# (x1,y1) + (x2,y2)"
+    "# (x1,y1) + (x2,y2)\n",
+    "Point(x1, y1, a, b) + Point(x2, y2, a, b) "
    ]
   },
   {
