finish ex. ch. 2

--- a/code-ch02/Chapter2.ipynb
+++ b/code-ch02/Chapter2.ipynb
@@ -230,9 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5\n",
     "\n",
@@ -251,9 +263,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(18.0,77.0)_5_7"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exercise 6\n",
     "\n",
@@ -262,7 +285,8 @@
     "a = 5\n",
     "b = 7\n",
     "x1, y1 = -1, -1\n",
-    "# (-1,-1) + (-1,-1)"
+    "# (-1,-1) + (-1,-1)\n",
+    "Point(x1, y1, a, b) + Point(x1, y1, a, b) "
    ]
   },
   {
@@ -278,15 +302,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.PointTest(\"test_add2\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
