--- a/code-ch03/Chapter3.ipynb
+++ b/code-ch03/Chapter3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "192 105\n",
+      "in field\n",
+      "\n",
+      "17 56\n",
+      "in field\n",
+      "\n",
+      "200 119\n",
+      "not in field\n",
+      "\n",
+      "1 193\n",
+      "in field\n",
+      "\n",
+      "42 99\n",
+      "not in field\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1\n",
     "\n",
@@ -40,14 +62,31 @@
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "\n",
-    "# (192,105), (17,56), (200,119), (1,193), (42,99)"
+    "# (192,105), (17,56), (200,119), (1,193), (42,99)\n",
+    "for x,y in (192,105), (17,56), (200,119), (1,193), (42,99):\n",
+    "    print(x,y)\n",
+    "    try:\n",
+    "        assert (y**2) % prime == ( x**3 + 7 )% prime\n",
+    "        print('in field')\n",
+    "    except:\n",
+    "        print('not in field')\n",
+    "\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(192,105)_0_7 FieldElement(223)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement, Point\n",
     "a = FieldElement(num=0, prime=223)\n",
@@ -60,9 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(170,142)_0_7 FieldElement(223)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement, Point\n",
     "prime = 223\n",
@@ -92,9 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(FieldElement_223(220),FieldElement_223(181))_FieldElement_223(0)_FieldElement_223(7)\n",
+      "Point(FieldElement_223(215),FieldElement_223(68))_FieldElement_223(0)_FieldElement_223(7)\n",
+      "Point(FieldElement_223(47),FieldElement_223(71))_FieldElement_223(0)_FieldElement_223(7)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2\n",
     "\n",
@@ -102,9 +159,19 @@
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "\n",
+    "def mypoint(x, y):\n",
+    "    return Point(x = FieldElement(x, prime),\n",
+    "                 y = FieldElement(y, prime),\n",
+    "                 a = a,\n",
+    "                 b = b)\n",
     "# (170,142) + (60,139)\n",
+    "\n",
+    "print(mypoint(170,142) + mypoint(60,139))\n",
     "# (47,71) + (17,56)\n",
-    "# (143,98) + (76,66)"
+    "print(mypoint(47,71) + mypoint(17,56))\n",
+    "# (143,98) + (76,66)\n",
+    "print(mypoint(143,98) + mypoint(76,66))\n",
+    "\n"
    ]
   },
   {
@@ -120,9 +187,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3\n",
     "\n",
@@ -148,9 +227,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(FieldElement_223(49),FieldElement_223(71))_FieldElement_223(0)_FieldElement_223(7)\n",
+      "Point(FieldElement_223(36),FieldElement_223(111))_FieldElement_223(0)_FieldElement_223(7)\n",
+      "Point(FieldElement_223(194),FieldElement_223(51))_FieldElement_223(0)_FieldElement_223(7)\n",
+      "Point(FieldElement_223(116),FieldElement_223(55))_FieldElement_223(0)_FieldElement_223(7)\n",
+      "Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4\n",
     "\n",
@@ -158,12 +249,29 @@
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "\n",
+    "def mypoint(x, y):\n",
+    "    return Point(x = FieldElement(x, prime),\n",
+    "                 y = FieldElement(y, prime),\n",
+    "                 a = a,\n",
+    "                 b = b)\n",
+    "\n",
     "# 2*(192, 105)\n",
+    "print(2*mypoint(192, 105))\n",
+    "# print(mypoint(192, 105) + mypoint(192, 105))\n",
+    "\n",
     "# 2*(143, 98)\n",
     "# 2*(47, 71)\n",
+    "double = mypoint(47, 71) + mypoint(47, 71)\n",
+    "print(prod2)\n",
+    "\n",
     "# 4*(47, 71)\n",
+    "quad = double + double\n",
+    "print(quad)\n",
     "# 8*(47, 71)\n",
+    "print(quad+quad)\n",
     "# 21*(47, 71)\n",
+    "oct = quad+quad\n",
+    "print(oct + oct + quad + mypoint(47, 71))\n",
     "\n",
     "# create a product variable\n",
     "# add the point to the product n times\n",
@@ -199,9 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "order=7\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5\n",
     "\n",
@@ -213,6 +329,14 @@
     "p = Point(x, y, a, b)\n",
     "inf = Point(None, None, a, b)\n",
     "\n",
+    "prod = p\n",
+    "for order in range(1, 1000):\n",
+    "    # print(i)\n",
+    "    if prod == inf:\n",
+    "        print(f\"{order=}\")\n",
+    "        break\n",
+    "    prod += p\n",
+    "\n",
     "# create a product variable\n",
     "# create a counter variable\n",
     "# loop until the product is the point at infinity\n",
@@ -222,9 +346,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement, Point\n",
     "prime = 223\n",
@@ -234,6 +366,30 @@
     "y = FieldElement(86, prime)\n",
     "p = Point(x, y, a, b)\n",
     "print(7*p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55066263022277343669578718895168534326250603453777594175500187360389116729240\n",
+      "27533131511138671834789359447584267163125301726888797087750093680194558364620\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 0x79be667ef9dcbbac55a06295ce870b07029bfcdb2dce28d959f2815b16f81798\n",
+    "\n",
+    "type(number//2)\n",
+    "# type(number/2)\n",
+    "print(number)\n",
+    "print(number//2)\n",
+    "\n"
    ]
   },
   {
@@ -269,9 +425,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S256Point(infinity)\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import G, N\n",
     "print(N*G)"
@@ -279,9 +443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import S256Point, G, N\n",
     "z = 0xbc62d4b80d9e36da29c16c5d4d9f11731f36052c72401a76c23c0fb5a9b74423\n",
@@ -325,27 +497,120 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R = S256Point(ac8d1c87e51d0d441be8b3dd5b05c8795b48875dffe00b7ffcfac23010d3a395, 89d012751792ddcd1f9d107a6b453e8c95f174299b11d6965755bc345d6726ca)\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6\n",
+    "from ecc import S256Point, G, N\n",
     "\n",
+    "\n",
+    "# P public key\n",
     "point = S256Point(\n",
     "    0x887387e452b8eacc4acfde10d9aaf7f6d9a0f975aabb10d006e4da568744d06c, \n",
     "    0x61de6d95231cd89026e286df3b6ae4a894a3378e393e93a0f45b666329a0ae34)\n",
     "# signature 1\n",
+    "# message hash\n",
     "z = 0xec208baa0fc1c19f708a9ca96fdeff3ac3f230bb4a7ba4aede4942ad003c0f60\n",
-    "r = 0xac8d1c87e51d0d441be8b3dd5b05c8795b48875dffe00b7ffcfac23010d3a395\n",
+    "# given signature (r,s)\n",
+    "r = 0xac8d1c87e51d0d441be8b3dd5b05c8795b48875dffe00b7ffcfac23010d3a395 \n",
     "s = 0x68342ceff8935ededd102dd876ffd6ba72d6a427a3edb13d26eb0781cb423c4\n",
-    "# signature 2\n",
-    "z = 0x7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d\n",
-    "r = 0xeff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c\n",
-    "s = 0xc7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6"
+    "\n",
+    "\n",
+    "s_inv = pow(s, N-2, N)\n",
+    "\n",
+    "u = z*s_inv % N\n",
+    "v = r*s_inv % N\n",
+    "\n",
+    "print(f\"R = {u*G + v*point}\")\n",
+    "\n",
+    "print((u*G + v*point).x.num == r)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# u = \n",
+    "\n",
+    "# # signature 2\n",
+    "# z = 0x7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d\n",
+    "# r = 0xeff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c\n",
+    "# s = 0xc7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R = S256Point(00eff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c, f0905bbd8543eb6c7a2f5a02b74f227ed136376797a12f26e9756f52e5a06f68)\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 6\n",
+    "from ecc import S256Point, G, N\n",
+    "\n",
+    "\n",
+    "# P public key\n",
+    "point = S256Point(\n",
+    "    0x887387e452b8eacc4acfde10d9aaf7f6d9a0f975aabb10d006e4da568744d06c, \n",
+    "    0x61de6d95231cd89026e286df3b6ae4a894a3378e393e93a0f45b666329a0ae34)\n",
+    "# signature 1\n",
+    "# message hash\n",
+    "z = 0x7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d\n",
+    "r = 0xeff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c\n",
+    "s = 0xc7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6\n",
+    "\n",
+    "\n",
+    "s_inv = pow(s, N-2, N)\n",
+    "\n",
+    "u = z*s_inv % N\n",
+    "v = r*s_inv % N\n",
+    "\n",
+    "print(f\"R = {u*G + v*point}\")\n",
+    "\n",
+    "print((u*G + v*point).x.num == r)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# u = \n",
+    "\n",
+    "# # signature 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S256Point(028d003eab2e428d11983f3e97c3fa0addf3b42740df0d211795ffb3be2f6c52, 0ae987b9ec6ea159c78cb2a937ed89096fb218d9e7594f02b547526d8cd309e2)\n",
+      "0x231c6f3d980a6b0fb7152f85cee7eb52bf92433d9919b9c5218cb08e79cce78\n",
+      "0x2b698a0f0a4041b77e63488ad48c23e8e8838dd1fb7520408b121697b782ef22\n",
+      "0xbb14e602ef9e3f872e25fad328466b34e6734b7a0fcd58b1eb635447ffae8cb9\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import S256Point, G, N\n",
     "from helper import hash256\n",
@@ -378,25 +643,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p=S256Point(f01d6b9018ab421dd410404cb869072065522bf85734008f105cf385a023a80f, 0eba29d0f0c5408ed681984dc525982abefccd9f7ff01dd26da4999cf3f6a295),\n",
+      " z=68128520874913546745294642417570923341793882471965920093685935829550641843528,\n",
+      " r=16450161931905532096658251981134470523555646311436162815860936713112270199679,\n",
+      " s=30118405481781076456689848120869146909831082568133064153821376432321443239797\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7\n",
+    "from ecc import S256Point, G, N\n",
+    "from helper import hash256\n",
     "\n",
-    "# Exercise 7\n",
     "\n",
     "e = 12345\n",
     "z = int.from_bytes(hash256(b'Programming Bitcoin!'), 'big')\n",
     "\n",
     "# choose a random k\n",
+    "k = 11234125125\n",
+    "k_inv = pow(k, N-2, N)\n",
     "# calculate r (kG's x-coordinate)\n",
+    "R = k*G\n",
+    "r = R.x.num % N\n",
+    "s = (z + r*e) * k_inv % N\n",
+    "p = e*G\n",
+    "print(f\"{p=},\\n {z=},\\n {r=},\\n {s=}\")\n",
     "# calculate s ((z+re)/k)\n",
     "# print the point, z, r and s"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
